--- a/OnTheSpot/Application/Info.plist
+++ b/OnTheSpot/Application/Info.plist
@@ -2,7 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>We need your location to show spots near you.</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.793137083428-q7o09p6n6nallbu63m90ogdlamonj6ra</string>
+			</array>
+		</dict>
+		<dict/>
+	</array>
 </dict>
 </plist>
